Fase2 (#5)
* feat: add get payment status route

* feat: sort order by status

* feat: add filters on query

* feat: implement update order status

* feat: add timezone parser

* feat: adicionando arquivo para deployment via kubernetes.

* feat: adicionando arquivo para deployment via kubernetes.

* feat: adicionando arquivo para deployment via kubernetes.

* feat: add health check route

* feat: create http client

* feat: implement payment solution integration

* feat: implement checkout with mercado pago

* chore: adapt database in K8s

* docs: add doc for health route

* docs: add doc for updateOrderStatus

* docs: add doc for getOrderPayment

* docs: add doc for listenOrderPayment

* feat: adjustando health check url.

* chore: add NODE_ENV

* fix: remove bd check

* chore: adjust devops

* docs: adapt docs

* feat: adicionando variaveis no configmap.

* docs: add postman collection

* Adicionando README na fase02 (#4)

* ajustando readme

* add comandos para executar o Kubernetes

---------


---------
