# src/adapter/driver/api/config/swagger/swagger.json
@@ -18,6 +18,37 @@
     }
   ],
   "paths": {
+    "/health": {
+      "get": {
+        "tags": [
+          "Health"
+        ],
+        "summary": "Valida a saúde da aplicação",
+        "operationId": "check",
+        "responses": {
+          "200": {
+            "description": "Status da aplicação",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessHealthCheckResponseBody"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorHealthCheckResponseBody"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/clientes": {
       "post": {
         "tags": [
@@ -507,10 +538,240 @@
           }
         }
       }
+    },
+    "/pedidos/{id}/atualizar-status": {
+      "put": {
+        "tags": [
+          "Pedido"
+        ],
+        "summary": "Atualiza o status do pedido",
+        "operationId": "updateOrderStatus",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "Id do pedido",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateStatusRequestBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Informação do status",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateStatusResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro na requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pedidos/{id}/pagamento": {
+      "get": {
+        "tags": [
+          "Pedido"
+        ],
+        "summary": "Busca os detalhes do pagamento do pedido",
+        "operationId": "getOrderPayment",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "Id do pedido",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Informação do pagamento",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrderPaymentResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro na requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Erro na requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pedidos/webhook-pagamento": {
+      "post": {
+        "tags": [
+          "Pedido"
+        ],
+        "summary": "Recebe atualizações do pagamento vindas do Mercado Pago",
+        "operationId": "listenOrderPayment",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ListenOrderPaymentRequestBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Informação do status",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListenOrderPaymentResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro na requisição",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "SuccessHealthCheckResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "properties": {
+              "status": {
+                "type": "string",
+                "description": "Status atual da aplicação",
+                "example": "HEALTH"
+              },
+              "stage": {
+                "type": "string",
+                "description": "Ambiente da aplicação",
+                "example": "DEVELOPMENT"
+              }
+            }
+          }
+        }
+      },
+      "ErrorHealthCheckResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "properties": {
+              "status": {
+                "type": "string",
+                "description": "Status atual da aplicação",
+                "example": "UNHEALTH"
+              },
+              "stage": {
+                "type": "string",
+                "description": "Ambiente da aplicação",
+                "example": "DEVELOPMENT"
+              },
+              "info": {
+                "type": "object",
+                "properties": {
+                  "database": {
+                    "type": "object",
+                    "properties": {
+                      "status": {
+                        "type": "string",
+                        "description": "Status do banco de dados",
+                        "example": "DOWN"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "CreateCustomerRequestBody": {
         "type": "object",
         "properties": {
@@ -920,6 +1181,139 @@
                 }
               }
             }
+          }
+        }
+      },
+      "UpdateStatusRequestBody": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "enum": [
+              "RECEBIDO",
+              "EM_PREPARO",
+              "PRONTO",
+              "FINALIZADO",
+              "CANCELADO"
+            ],
+            "description": "Status anterior do pedido",
+            "example": "RECEBIDO"
+          }
+        }
+      },
+      "UpdateStatusResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "properties": {
+              "previousStatus": {
+                "type": "string",
+                "enum": [
+                  "RECEBIDO",
+                  "EM_PREPARO",
+                  "PRONTO",
+                  "FINALIZADO",
+                  "CANCELADO"
+                ],
+                "description": "Status anterior do pedido",
+                "example": "RECEBIDO"
+              },
+              "currentStatus": {
+                "type": "string",
+                "enum": [
+                  "RECEBIDO",
+                  "EM_PREPARO",
+                  "PRONTO",
+                  "FINALIZADO",
+                  "CANCELADO"
+                ],
+                "description": "Status atual do pedido",
+                "example": "EM_PREPARO"
+              },
+              "updatedAt": {
+                "type": "date",
+                "description": "Data de criação do pedido",
+                "example": "2024-05-28T22:23:31.742Z"
+              }
+            }
+          }
+        }
+      },
+      "GetOrderPaymentResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "description": "Id do pagamento",
+                "example": "f76408cc-f92a-419f-87f7-8e5fa451e34b"
+              },
+              "status": {
+                "type": "string",
+                "enum": [
+                  "PENDENTE",
+                  "AUTORIZADO",
+                  "REJEITADO",
+                  "REEMBOLSADO"
+                ],
+                "description": "Status de pagamento",
+                "example": "PENDENTE"
+              },
+              "type": {
+                "enum": [
+                  "DINHEIRO",
+                  "CARTAO_CREDITO",
+                  "CARTAO_DEBITO",
+                  "PIX",
+                  "VALE_REFEICAO"
+                ],
+                "description": "Tipo de pagamento",
+                "example": "PIX"
+              },
+              "effectiveDate": {
+                "type": "date",
+                "description": "Data de criação do pedido",
+                "example": "2024-05-28T22:23:31.742Z"
+              },
+              "externalId": {
+                "type": "string",
+                "description": "Id do pagamento do Mercado Pago",
+                "example": "1325544717"
+              }
+            }
+          }
+        }
+      },
+      "ListenOrderPaymentRequestBody": {
+        "type": "object",
+        "properties": {
+          "action": {
+            "type": "string",
+            "description": "Ação do evento recebido",
+            "example": "payment.created"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "description": "Id do pagamento do Mercado Pago",
+                "example": "1325544717"
+              }
+            }
+          }
+        }
+      },
+      "ListenOrderPaymentResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "string",
+            "description": "Mensagem de sucesso",
+            "example": "OK"
           }
         }
       },
