# src/adapter/driver/api/controllers/types/controllers.ts
@@ -1,5 +1,12 @@
 import { Request as ExpressRequest, Response as ExpressResponse } from 'express'
 
+export interface IHealthController {
+  check(
+    request: ExpressRequest,
+    response: ExpressResponse,
+  ): Promise<ExpressResponse>
+}
+
 export interface ICustomerController {
   createCustomer(
     request: ExpressRequest,
@@ -36,6 +43,18 @@ export interface IOrderController {
     response: ExpressResponse,
   ): Promise<ExpressResponse>
   searchOrders(
+    request: ExpressRequest,
+    response: ExpressResponse,
+  ): Promise<ExpressResponse>
+  updateOrderStatus(
+    request: ExpressRequest,
+    response: ExpressResponse,
+  ): Promise<ExpressResponse>
+  getOrderPayment(
+    request: ExpressRequest,
+    response: ExpressResponse,
+  ): Promise<ExpressResponse>
+  listenOrderPayment(
     request: ExpressRequest,
     response: ExpressResponse,
   ): Promise<ExpressResponse>
