# src/core/domain/repositories/order.repository.ts
@@ -13,11 +13,18 @@ export type OrderProduct = {
   quantity: number
   price: number
   observation?: string
+  effectiveDate: string
 }
 
 export interface IOrderRepository {
   saveOrder(order: Order): Promise<number>
   saveOrderProduct(orderProduct: OrderProduct): Promise<void>
-  updateOrderStatus(status: OrderCurrentStatus): Promise<void>
+  updateOrderStatus(
+    orderId: number,
+    status: OrderCurrentStatus,
+    updatedAt: string,
+  ): Promise<Order>
   findAllOrders(params?: OrderParams): Promise<Order[]>
+  findOrderById(orderId: number): Promise<Order>
+  findOrderByPaymentId(paymentId: string): Promise<Order>
 }
